--- a/src/style.css
+++ b/src/style.css
@@ -52,15 +52,15 @@ html, body, .container{
 
 #save-button{
     border-radius: 5px;
-    padding: 7px;
+    padding: 10px;
     border: none;
     background-color:#1f83cb;
     color: #fff;
-    width: 175px;
+    width: 100%;
 }
 
-form label, input {
-    display: block;
+form label, input, #unassign-link{
+    display: grid;
 }
 
 form label {
@@ -69,7 +69,7 @@ form label {
 
 .text-input{
     border-color: #1f83cb;
-    padding: 5px
+    padding: 5px;
 }
 
 h2{
@@ -77,7 +77,7 @@ h2{
     color: #1f83cb;
 }
 
-#unnasign-link{
-    place-self: center;
+#unassign-link{
+   text-align: center; 
 }
 
