--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 html, body, .container{
     height: 100%;
     margin: 0;
+    background: #f4f6f9;
 }
 
 .container{
@@ -13,23 +14,42 @@ html, body, .container{
     height: 100%;
     width: 200px;
     background: rgb(255,255,255);
-    border-right: 2px solid #C0C0C0
+    border-right: 1px solid #C0C0C0
 }
 
-.navbar__link {
+.navbar__link, .navbar__link_home{
     display: flex;
     align-items: center;
     background: #ffffff;
-    color: #696969;
     padding: 12px;
     text-decoration: none;
     font-weight: bold;
-    font-size: 0.85rem;
     border-bottom: 1px solid #ffffff;
 }
-
 .navbar__link .material-symbols-outlined{
     margin-right: 20px;
+}
+
+.navbar__link{
+    color: #696969;
+    font-size: 0.85rem;
+}
+
+.navbar__link_home{
+    color: #000;
+    font-size: 1.25rem;
+}
+
+.home{
+    align-items: stretch;
+}
+
+.navbar__link_home{
+    column-gap: 5px;
+}
+
+a, .page-path{
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar__link:active{
@@ -37,8 +57,9 @@ html, body, .container{
 }
 
 .current-farm-logo-image-icon img{
-     max-width:50%;
+    max-width:50%;
     height:auto;
+    vertical-align: super;
 }
 
 .flex-container{
@@ -48,6 +69,15 @@ html, body, .container{
     justify-content: flex-start;
     gap: 20px;
     flex-direction: column;
+    margin-top: 25px;
+}
+
+.path{
+    vertical-align: super;
+}
+
+.farm-details-sign{
+    margin-bottom: 30px;
 }
 
 .form{
@@ -69,6 +99,7 @@ form label, input, #unassign-link{
 
 form label {
     margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .text-input{
